--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "stripe": "^18.1.0",
+    "sweetalert2": "^11.21.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
